--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,15 @@ android {
     buildFeatures {
         viewBinding true
     }
+    //kotlinOptions{
+     //   jvmTarget = '1.8'
+    //}
 }
 
 dependencies {
     def work_version = "2.6.0"
     def lifecycle_version = "2.2.0"
-
+    //def kolin_version ="1.8"
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.concurrent:concurrent-futures:1.1.0'
@@ -62,6 +65,17 @@ dependencies {
     // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
     implementation "androidx.work:work-runtime:$work_version"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"
+    //implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6'
+
     // https://mvnrepository.com/artifact/nl.talsmasoftware/umldoclet
     compileOnly 'nl.talsmasoftware:umldoclet:2.0.14'
 }
