--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,21 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
+
+
+        //implementation 'com.squareup.retrofit2:retrofit:latest.version'
+        //implementation 'com.squareup.retrofit2:converter-gson:atest.version'
+        //implementation 'com.github.bumptech.glide:glide:latest.version'
+
+
+
+        classpath 'com.android.tools.build:gradle:7.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
+
 }
 
 allprojects {
