--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -15,7 +15,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -static-openmp")
 
 # OpenCV
 set(OpenCV_STATIC ON)
-set(OpenCV_DIR C:/OpenCV-android-sdk/sdk/native/jni)
+set(OpenCV_DIR /home/ema/Downloads/OpenCV-android-sdk/sdk/native/jni)
 find_package(OpenCV REQUIRED)
 
 # Creates and names a library, sets it as either STATIC
@@ -24,24 +24,24 @@ find_package(OpenCV REQUIRED)
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-             native-lib
+        native-lib
 
-             # Sets the library as a shared library.
-             SHARED
+        # Sets the library as a shared library.
+        SHARED
 
-             # Provides a relative path to your source file(s).
-            jniLogs.cpp
-            ellf.c
-            cmplx.c
-            const.c
-            mtherr.c
-            im_conv.cpp
-            vector_functions.cpp
-            PeakFinder.cpp
-            lpyr_functions.cpp
-            gdown_functions.cpp
-            processing_functions.cpp
-            native-lib.cpp )
+        # Provides a relative path to your source file(s).
+        jniLogs.cpp
+        ellf.c
+        cmplx.c
+        const.c
+        mtherr.c
+        im_conv.cpp
+        vector_functions.cpp
+        PeakFinder.cpp
+        lpyr_functions.cpp
+        gdown_functions.cpp
+        processing_functions.cpp
+        native-lib.cpp )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -50,11 +50,11 @@ add_library( # Sets the name of the library.
 # completing its build.
 
 find_library( # Sets the name of the path variable.
-              log-lib
+        log-lib
 
-              # Specifies the name of the NDK library that
-              # you want CMake to locate.
-              log )
+        # Specifies the name of the NDK library that
+        # you want CMake to locate.
+        log )
 
 # Jnigraphics lib from NDK is used for Bitmap manipulation in native code
 find_library(jnigraphics-lib jnigraphics)
@@ -64,9 +64,9 @@ find_library(jnigraphics-lib jnigraphics)
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       native-lib
-                       ${OpenCV_LIBS}
-                       ${jnigraphics-lib}
-                       # Links the target library to the log library
-                       # included in the NDK.
-                       ${log-lib} )
+        native-lib
+        ${OpenCV_LIBS}
+        ${jnigraphics-lib}
+        # Links the target library to the log library
+        # included in the NDK.
+        ${log-lib} )
